<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="studentViewModel"
            type="com.amsavarthan.security.ui.viewmodels.UserViewModel" />

        <variable
            name="handler"
            type="com.amsavarthan.security.ui.views.main.Handler" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context=".ui.views.main.MainFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/buttonSettings"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/settings"
                android:focusable="true"
                android:minWidth="48dp"
                android:onClick="@{handler::onSettingsButtonClicked}"
                android:padding="10dp"
                android:src="@drawable/ic_twotone_settings_24"
                app:layout_constraintBottom_toBottomOf="@+id/info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/studentName" />

            <TextView
                android:id="@+id/studentName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/karla"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:nullText="@{@string/fragment_main_title}"
                app:text="@{studentViewModel.user.name}"
                tools:text="Student Name" />

            <TextView
                android:id="@+id/info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/karla"
                android:paddingBottom="7dp"
                android:text="@string/fragment_main_subtitle"
                app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/studentName" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/buttonThumb"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:onLongClick="@{handler::onButtonThumbLongPressed}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_fileName="thumb.json" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:onClick="@{handler::goToHelplineNumbersFragment}"
                android:text="@string/helpline_numbers"
                app:layout_constraintBottom_toTopOf="@+id/gsdc_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/gsdc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/gsdc_chapter_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>