<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.amsavarthan.security.ui.views.guardian.Handler" />

        <variable
            name="adapter"
            type="com.amsavarthan.security.data.adapter.ItemsAdapter" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context=".ui.views.guardian.GuardianDetailsFragment"
        tools:visibility="visible">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingTop="24dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_guardian_details_title"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/fragment_guardian_details_subtitle"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{handler::onAddContactButtonClicked}"
                    android:overScrollMode="never"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:scrollbars="none"
                    android:text="@string/add_contact"
                    android:textColor="@color/white"
                    app:backgroundTint="#111932"
                    app:icon="@drawable/ic_baseline_add_24"
                    app:iconGravity="textStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/subtitle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    setAdapter="@{adapter}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:paddingBottom="@dimen/bottom_offset_dp"
                    android:scrollbars="none"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/buttonAdd"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_contact" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/next_button"
            android:onClick="@{handler::onNextButtonClicked}"
            android:src="@drawable/ic_baseline_done_24"
            app:backgroundTint="@color/yellow"
            app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>